--- a/automation_testcase/Functional_Testing/test-output/old/Default suite/methods-alphabetical.html
+++ b/automation_testcase/Functional_Testing/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="928d86">  <td>20/08/27 17:22:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login_Retest.loginTestCase()[pri:0, instance:com.yoloj.TestCases.TC_Login_Retest@965684]">loginTestCase</td> 
-  <td>main@14274612</td>   <td></td> </tr>
-<tr bgcolor="67c67e">  <td>20/08/27 17:21:53</td>   <td>-14777</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.yoloj.TestCases.TC_Login_Retest@965684]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@14274612</td>   <td></td> </tr>
-<tr bgcolor="67c67e">  <td>20/08/27 17:26:52</td>   <td>283547</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.yoloj.TestCases.TC_Login_Retest@965684]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@14274612</td>   <td></td> </tr>
+<tr bgcolor="f69090">  <td>21/07/27 17:33:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_StandardUser_AddToCart.Login_StandardUser()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@54c562f7]">Login_StandardUser</td> 
+  <td>main@1668016508</td>   <td></td> </tr>
+<tr bgcolor="68efa0">  <td>21/07/27 17:33:22</td>   <td>-5587</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@54c562f7]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1668016508</td>   <td></td> </tr>
+<tr bgcolor="68efa0">  <td>21/07/27 17:33:52</td>   <td>24142</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@54c562f7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1668016508</td>   <td></td> </tr>
 </table>
