--- a/automation_testcase/Functional_Testing/test-output/old/Suite/methods-alphabetical.html
+++ b/automation_testcase/Functional_Testing/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a16788">  <td>20/08/27 11:48:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.yoloj.TestCases.TC_UserRegister_Retest@4c203ea1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@813656972</td>   <td></td> </tr>
-<tr bgcolor="a16788">  <td>20/08/27 11:49:42</td>   <td>48159</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.yoloj.TestCases.TC_UserRegister_Retest@4c203ea1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@813656972</td>   <td></td> </tr>
-<tr bgcolor="cf72fd">  <td>20/08/27 11:49:07</td>   <td>13122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_UserRegister_Retest.userRegister()[pri:0, instance:com.yoloj.TestCases.TC_UserRegister_Retest@4c203ea1]">userRegister</td> 
-  <td>main@813656972</td>   <td></td> </tr>
+<tr bgcolor="a263c2">  <td>21/07/27 17:55:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_StandardUser_AddToCart.Login_StandardUser()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@6dbb137d]">Login_StandardUser</td> 
+  <td>main@81412691</td>   <td></td> </tr>
+<tr bgcolor="c072cb">  <td>21/07/27 17:55:26</td>   <td>-5469</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@6dbb137d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@81412691</td>   <td></td> </tr>
+<tr bgcolor="c072cb">  <td>21/07/27 17:55:57</td>   <td>25306</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@6dbb137d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@81412691</td>   <td></td> </tr>
 </table>
