--- a/automation_testcase/Functional_Testing/test-output/emailable-report.html
+++ b/automation_testcase/Functional_Testing/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">35,128</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">37,705</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.saucedemo.testcases.TC_StandardUser_AddToCart</td><td><a href="#m0">Login_StandardUser</a></td><td rowspan="1">1627403243697</td><td rowspan="1">27771</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.saucedemo.testcases.TC_StandardUser_RemovingAndAddingInCart</td><td><a href="#m0">StandardUser_Multiple</a></td><td rowspan="1">1627408418332</td><td rowspan="1">28031</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.saucedemo.testcases.TC_StandardUser_AddToCart#Login_StandardUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.saucedemo.testcases.TC_StandardUser_RemovingAndAddingInCart#StandardUser_Multiple</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
