--- a/automation_testcase/Functional_Testing/test-output/index.html
+++ b/automation_testcase/Functional_Testing/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\arunr\AppData\Local\Temp\testng-eclipse--1696260363\testng-customsuite.xml</span>
+                    <span>C:\Users\arunr\AppData\Local\Temp\testng-eclipse--396692132\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.saucedemo.testcases.TC_StandardUser_AddToCart" class="method navigator-link" hash-for-method="Login_StandardUser">Login_StandardUser</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.saucedemo.testcases.TC_StandardUser_RemovingAndAddingInCart" class="method navigator-link" hash-for-method="StandardUser_Multiple">StandardUser_Multiple</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,16 +120,16 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.saucedemo.testcases.TC_StandardUser_AddToCart</span>
+              <span class="class-name">com.saucedemo.testcases.TC_StandardUser_RemovingAndAddingInCart</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Login_StandardUser">
-                  </a> <!-- Login_StandardUser -->
-                  <span class="method-name">Login_StandardUser</span>
+                  <a name="StandardUser_Multiple">
+                  </a> <!-- StandardUser_Multiple -->
+                  <span class="method-name">StandardUser_Multiple</span>
                   <em>
-(Verify whether the Standard user is able add products into cart)                  </em>
+(Verify whether the Standard user is able add multiple products into cart)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\arunr\AppData\Local\Temp\testng-eclipse--1696260363\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\arunr\AppData\Local\Temp\testng-eclipse--396692132\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.saucedemo.testcases.TC_StandardUser_AddToCart&quot;/&gt;
+      &lt;class name=&quot;com.saucedemo.testcases.TC_StandardUser_RemovingAndAddingInCart&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Login_StandardUser')
-data.setCell(0, 2, 'com.saucedemo.testcases.TC_StandardUser_AddToCart')
-data.setCell(0, 3, 27771);
+data.setCell(0, 1, 'StandardUser_Multiple')
+data.setCell(0, 2, 'com.saucedemo.testcases.TC_StandardUser_RemovingAndAddingInCart')
+data.setCell(0, 3, 28031);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 27 seconds</span>
+              <span class="suite-total-time">Total running time: 28 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,18 +221,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.saucedemo.testcases.TC_StandardUser_AddToCart</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.saucedemo.testcases.TC_StandardUser_RemovingAndAddingInCart</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">Login_StandardUser</span>
-                <span class="method-start">5651 ms</span>
+                <span class="method-name">StandardUser_Multiple</span>
+                <span class="method-start">6673 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">33470 ms</span>
+                <span class="method-start">34720 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
