--- a/automation_testcase/Functional_Testing/test-output/old/Default suite/methods.html
+++ b/automation_testcase/Functional_Testing/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="68efa0">  <td>21/07/27 21:57:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@54c562f7]">&gt;&gt;setup</td> 
+<tr bgcolor="68efa0">  <td>21/07/27 23:23:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_RemovingAndAddingInCart@54c562f7]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1668016508</td>   <td></td> </tr>
-<tr bgcolor="f69090">  <td>21/07/27 21:57:23</td>   <td>5635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_StandardUser_AddToCart.Login_StandardUser()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@54c562f7]">Login_StandardUser</td> 
+<tr bgcolor="f69090">  <td>21/07/27 23:23:38</td>   <td>6654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_StandardUser_RemovingAndAddingInCart.StandardUser_Multiple()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_RemovingAndAddingInCart@54c562f7]">StandardUser_Multiple</td> 
   <td>main@1668016508</td>   <td></td> </tr>
-<tr bgcolor="68efa0">  <td>21/07/27 21:57:51</td>   <td>33454</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@54c562f7]">&lt;&lt;tearDown</td> 
+<tr bgcolor="68efa0">  <td>21/07/27 23:24:06</td>   <td>34702</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_RemovingAndAddingInCart@54c562f7]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1668016508</td>   <td></td> </tr>
 </table>
