--- a/automation_testcase/Functional_Testing/test-output/index.html
+++ b/automation_testcase/Functional_Testing/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\arunr\AppData\Local\Temp\testng-eclipse-515742839\testng-customsuite.xml</span>
+                    <span>C:\Users\arunr\AppData\Local\Temp\testng-eclipse-382942803\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.saucedemo.testcases.TC_ProblemUser_RemovingAndAddingInCart" class="method navigator-link" hash-for-method="Problemuser_Removing">Problemuser_Removing</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.saucedemo.testcases.TC_NegativeCase_EmptyCart" class="method navigator-link" hash-for-method="EmptyCart">EmptyCart</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -122,20 +122,20 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.saucedemo.testcases.TC_ProblemUser_RemovingAndAddingInCart</span>
+              <span class="class-name">com.saucedemo.testcases.TC_NegativeCase_EmptyCart</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Problemuser_Removing">
-                  </a> <!-- Problemuser_Removing -->
-                  <span class="method-name">Problemuser_Removing</span>
-                  <div class="stack-trace">java.lang.AssertionError: Not Matching expected [true] but found [false]
+                  <a name="EmptyCart">
+                  </a> <!-- EmptyCart -->
+                  <span class="method-name">EmptyCart</span>
+                  <div class="stack-trace">java.lang.AssertionError: Cart is Empty expected [true] but found [false]
 	at org.testng.Assert.fail(Assert.java:99)
 	at org.testng.Assert.failNotEquals(Assert.java:1037)
 	at org.testng.Assert.assertTrue(Assert.java:45)
-	at com.saucedemo.pageObjects.Saucedemo_Cart.verify_SelectedProductsAreShowing(Saucedemo_Cart.java:50)
-	at com.saucedemo.testcases.TC_ProblemUser_RemovingAndAddingInCart.Problemuser_Removing(TC_ProblemUser_RemovingAndAddingInCart.java:57)
+	at com.saucedemo.pageObjects.Saucedemo_Cart.click_checkOut(Saucedemo_Cart.java:25)
+	at com.saucedemo.testcases.TC_NegativeCase_EmptyCart.EmptyCart(TC_NegativeCase_EmptyCart.java:58)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -167,7 +167,7 @@
 
 </div> <!-- stack-trace -->
                   <em>
-(Verify whether the Problem user is able add multiple products into cart and remove)                  </em>
+(Verify whether the user is able proceed order without adding products into cart)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -175,7 +175,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\arunr\AppData\Local\Temp\testng-eclipse-515742839\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\arunr\AppData\Local\Temp\testng-eclipse-382942803\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,7 +184,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.saucedemo.testcases.TC_ProblemUser_RemovingAndAddingInCart&quot;/&gt;
+      &lt;class name=&quot;com.saucedemo.testcases.TC_NegativeCase_EmptyCart&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -226,14 +226,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Problemuser_Removing')
-data.setCell(0, 2, 'com.saucedemo.testcases.TC_ProblemUser_RemovingAndAddingInCart')
-data.setCell(0, 3, 34653);
+data.setCell(0, 1, 'EmptyCart')
+data.setCell(0, 2, 'com.saucedemo.testcases.TC_NegativeCase_EmptyCart')
+data.setCell(0, 3, 77806);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 34 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -259,7 +259,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.saucedemo.testcases.TC_ProblemUser_RemovingAndAddingInCart</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.saucedemo.testcases.TC_NegativeCase_EmptyCart</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
@@ -267,12 +267,12 @@ return data;
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">Problemuser_Removing</span>
-                <span class="method-start">5768 ms</span>
+                <span class="method-name">EmptyCart</span>
+                <span class="method-start">9062 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">40436 ms</span>
+                <span class="method-start">86927 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
