--- a/automation_testcase/Functional_Testing/test-output/old/Default suite/methods-alphabetical.html
+++ b/automation_testcase/Functional_Testing/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ab799c">  <td>21/07/28 01:03:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ProblemUser_RemovingAndAddingInCart.Problemuser_Removing()[pri:0, instance:com.saucedemo.testcases.TC_ProblemUser_RemovingAndAddingInCart@6d2a209c]">Problemuser_Removing</td> 
+<tr bgcolor="ab799c">  <td>21/07/28 11:26:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_NegativeCase_EmptyCart.EmptyCart()[pri:0, instance:com.saucedemo.testcases.TC_NegativeCase_EmptyCart@6d2a209c]">EmptyCart</td> 
   <td>main@168366</td>   <td></td> </tr>
-<tr bgcolor="80cb77">  <td>21/07/28 01:03:48</td>   <td>-5752</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_ProblemUser_RemovingAndAddingInCart@6d2a209c]">&gt;&gt;setup</td> 
+<tr bgcolor="80cb77">  <td>21/07/28 11:26:22</td>   <td>-9042</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_NegativeCase_EmptyCart@6d2a209c]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@168366</td>   <td></td> </tr>
-<tr bgcolor="80cb77">  <td>21/07/28 01:04:29</td>   <td>34670</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_ProblemUser_RemovingAndAddingInCart@6d2a209c]">&lt;&lt;tearDown</td> 
+<tr bgcolor="80cb77">  <td>21/07/28 11:27:49</td>   <td>77866</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_NegativeCase_EmptyCart@6d2a209c]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@168366</td>   <td></td> </tr>
 </table>
